--- a/MenuMate/Services/ServicesApp/FloorPlanClient/FloorPlanClient.csproj
+++ b/MenuMate/Services/ServicesApp/FloorPlanClient/FloorPlanClient.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.4.12\lib\net40\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -67,6 +70,7 @@
   <ItemGroup>
     <None Include="img\portrait.png" />
     <None Include="img\landscape.png" />
+    <None Include="packages.config" />
     <None Include="Resources\Landscape.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
