--- a/MenuMate/Services/ServicesApp/PocketVoucherIntegration/PocketVoucherIntegration.csproj
+++ b/MenuMate/Services/ServicesApp/PocketVoucherIntegration/PocketVoucherIntegration.csproj
@@ -31,9 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NLog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Assemblies\3rdParty\Nlog\32\NLog.dll</HintPath>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.4.12\lib\net40\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -61,6 +60,7 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="packages.config" />
     <None Include="Service References\PocketVoucherServiceReference\PocketVoucherIntegration.PocketVoucherServiceReference.RedeemResult.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
