blank service creation for fiscal printer

--- a/MenuMate/Services/ServicesApp/MenumateServices/App.config
+++ b/MenuMate/Services/ServicesApp/MenumateServices/App.config
@@ -103,6 +103,19 @@
           </baseAddresses>
         </host>
       </service>
+      <service behaviorConfiguration="ServiceFiscalPrinterBehavior" name="MenumateServices.WCFServices.WCFServiceFiscalPrinter">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceFiscalPrinter" contract="MenumateServices.WCFServices.IWCFFiscalPrinter">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8744/MenumateServices/FiscalPrinter/" />
+          </baseAddresses>
+        </host>
+      </service>
     </services>
     <behaviors>
       <serviceBehaviors>
@@ -137,6 +150,11 @@
           <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
         <behavior name="ServiceWalletPaymentsBehavior">
+          <serviceMetadata httpGetEnabled="true" />
+          <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
+        <behavior name="ServiceFiscalPrinterBehavior">
           <serviceMetadata httpGetEnabled="true" />
           <useRequestHeadersForMetadataAddress />
           <serviceDebug includeExceptionDetailInFaults="true" />
