--- a/MenuMate/Services/ServicesApp/MenumateServices/App.config
+++ b/MenuMate/Services/ServicesApp/MenumateServices/App.config
@@ -104,7 +104,7 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceFiscalPrinterBehavior" name="MenumateServices.WCFServices.WCFServiceFiscalPrinter">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceFiscalPrinter" contract="MenumateServices.WCFServices.IWCFFiscalPrinter">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceFiscalPrinter" contract="MenumateServices.WCFServices.IWCFServiceFiscalPrinter">
           <identity>
             <dns value="localhost" />
           </identity>
