--- a/MenuMate/Services/ServicesApp/FiscalPrinterIntegration/FiscalPrinterIntegration.csproj
+++ b/MenuMate/Services/ServicesApp/FiscalPrinterIntegration/FiscalPrinterIntegration.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.PointOfService, Version=1.11.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Ready for Distribution\Microsoft.PointOfService.dll</HintPath>
+    </Reference>
     <Reference Include="NLog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -48,6 +52,7 @@
     <Compile Include="Domain\FiscalResponseDetails.cs" />
     <Compile Include="Domain\FiscalService.cs" />
     <Compile Include="FiscalCommunicationController.cs" />
+    <Compile Include="FiscalPrinter_FP81II.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\ServiceLogger.cs" />
   </ItemGroup>
