--- a/OracleTCPServer/OracleTCPServer/OracleTCPServer.csproj
+++ b/OracleTCPServer/OracleTCPServer/OracleTCPServer.csproj
@@ -35,7 +35,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\Runtime\</OutputPath>
+    <OutputPath>..\..\RunTime\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
