Branch_MM-114245 service hosted MenumateServicePaymentSense

--- a/MenuMate/Services/ServicesApp/MenumateServices/App.config
+++ b/MenuMate/Services/ServicesApp/MenumateServices/App.config
@@ -13,7 +13,8 @@
   <system.serviceModel>
     <services>
       <service behaviorConfiguration="ServiceWebMateBehavior" name="MenumateServices.WCFServices.WCFServiceWebMate">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServiceWebMate" contract="MenumateServices.WCFServices.IWCFServiceWebMate">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration"
+          name="basicHttpBinding_ServiceWebMate" contract="MenumateServices.WCFServices.IWCFServiceWebMate">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -26,7 +27,8 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceLoyaltyMateBehavior" name="MenumateServices.WCFServices.WCFServiceLoyaltyMate">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceLoyaltyMate" contract="MenumateServices.WCFServices.IWCFServiceLoyaltyMate">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
+          name="basicHttpBinding_ServiceLoyaltyMate" contract="MenumateServices.WCFServices.IWCFServiceLoyaltyMate">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -39,7 +41,8 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceSmartLinkBehavior" name="MenumateServices.WCFServices.WCFServiceSmartLink">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceSmartLink" contract="MenumateServices.WCFServices.IWCFServiceSmartLink">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
+          name="basicHttpBinding_ServiceSmartLink" contract="MenumateServices.WCFServices.IWCFServiceSmartLink">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -51,8 +54,10 @@
           </baseAddresses>
         </host>
       </service>
-      <service behaviorConfiguration="ServicePocketVoucherBehavior" name="MenumateServices.WCFServices.PocketVoucherWebService">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServicePocketVoucher" contract="MenumateServices.WCFServices.IPocketVoucherWebService">
+      <service behaviorConfiguration="ServicePocketVoucherBehavior"
+        name="MenumateServices.WCFServices.PocketVoucherWebService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration"
+          name="basicHttpBinding_ServicePocketVoucher" contract="MenumateServices.WCFServices.IPocketVoucherWebService">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -65,7 +70,8 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceSalesForceBehavior" name="MenumateServices.WCFServices.SalesForceIntegrationWebService">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServiceSalesForce" contract="MenumateServices.WCFServices.ISalesForceIntegrationWebService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration"
+          name="basicHttpBinding_ServiceSalesForce" contract="MenumateServices.WCFServices.ISalesForceIntegrationWebService">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -77,8 +83,10 @@
           </baseAddresses>
         </host>
       </service>
-      <service behaviorConfiguration="ServiceWalletPaymentsBehavior" name="MenumateServices.WCFServices.WCFServiceWalletPayments">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceWalletPayments" contract="MenumateServices.WCFServices.IWCFServiceWalletPayments">
+      <service behaviorConfiguration="ServiceWalletPaymentsBehavior"
+        name="MenumateServices.WCFServices.WCFServiceWalletPayments">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
+          name="basicHttpBinding_ServiceWalletPayments" contract="MenumateServices.WCFServices.IWCFServiceWalletPayments">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -91,7 +99,8 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceSiHotBehavior" name="MenumateServices.WCFServices.SiHotIntegrationWebService">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServiceSiHot" contract="MenumateServices.WCFServices.ISiHotIntegrationWebService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration"
+          name="basicHttpBinding_ServiceSiHot" contract="MenumateServices.WCFServices.ISiHotIntegrationWebService">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -103,16 +112,33 @@
           </baseAddresses>
         </host>
       </service>
- <service behaviorConfiguration="ServiceSmartConnectBehavior" name="MenumateServices.WCFServices.WCFServiceSmartConnect">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceSmartConnect" contract="MenumateServices.WCFServices.IWCFSmartConnect">
- 		<identity>
+      <service behaviorConfiguration="ServiceSmartConnectBehavior"
+        name="MenumateServices.WCFServices.WCFServiceSmartConnect">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
+          name="basicHttpBinding_ServiceSmartConnect" contract="MenumateServices.WCFServices.IWCFSmartConnect">
+          <identity>
             <dns value="localhost" />
           </identity>
         </endpoint>
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
-          <baseAddresses>            
+          <baseAddresses>
             <add baseAddress="http://localhost:8744/MenumateServices/SmartConnect/" />
+          </baseAddresses>
+        </host>
+      </service>
+      <service behaviorConfiguration="ServicePaymentSenseBehavior"
+		name="MenumateServices.WCFServices.WCFServicePaymentSense">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
+          name="basicHttpBinding_ServicePaymentSense" contract="MenumateServices.WCFServices.IWCFServicePaymentSense">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8745/MenumateServices.WCFServices/WCFServicePaymentSense/" />
           </baseAddresses>
         </host>
       </service>
@@ -154,9 +180,14 @@
           <useRequestHeadersForMetadataAddress />
           <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
-<behavior name="ServiceSmartConnectBehavior">
+        <behavior name="ServiceSmartConnectBehavior">
           <serviceMetadata httpGetEnabled="true" />
           <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
+        <behavior name="ServicePaymentSenseBehavior">
+          <serviceMetadata httpGetEnabled="true" />
+		  <useRequestHeadersForMetadataAddress />
           <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
